[gd_scene load_steps=5 format=3 uid="uid://cyv7g07yfvixl"]

[ext_resource type="Script" path="res://items/health_pickup/health_pickup.gd" id="1_08pgb"]
[ext_resource type="Texture2D" uid="uid://cl0jd1rkksxbs" path="res://ui/icons/health_full.png" id="1_62ecj"]
[ext_resource type="AudioStream" uid="uid://ul7vyxcwsyas" path="res://sounds/item pickup[.wav" id="3_66xcq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_44b5d"]
radius = 6.0

[node name="HealthPickup" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_08pgb")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_62ecj")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_44b5d")

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_66xcq")
volume_db = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
